--- a/index.html
+++ b/index.html
@@ -48,24 +48,24 @@
 						<h2>Recent Work</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://jovian.ai/anityagangurde01/resnet-34-to-classify-fishes" class="image fit thumb"><img src="images/thumbs/fish.jpg" alt="" /></a>
+								<a href="https://jovian.ai/anityagangurde01/resnet-34-to-classify-fishes"><img src="images/thumbs/fish.jpg"  class="image fit thumb" alt="" /></a>
 								<h3>Using ResNet34 on Fish Dataset</h3>
 								<p>In this project, I used a pretrained ResNet34 model to train the Fish Dataset on, which was taken from Kaggle.
 									I achieved an accuracy of 99.70% within around 8 minutes.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://www.kaggle.com/anityagangurde/bank-customer-churn-prediction-xgboost-86-36" class="image fit thumb"><img src="images/thumbs/bank.jpg" alt="" /></a>
+								<a href="https://www.kaggle.com/anityagangurde/bank-customer-churn-prediction-xgboost-86-36"><img src="images/thumbs/bank.jpg" class="image fit thumb" alt="" /></a>
 								<h3>Banking Customer Churn Rate</h3>
 								<p>Banking Customer Churn Rate is a project in which the model determines whether customers will leave the bank given certain information about them.
 									I trained an XGBoost model on this customer dataset and achieved an accuracy of 86.36%.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://github.com/AnityaGan9urde/HR-Analytics-Will-someone-quit" class="image fit thumb"><img src="images/thumbs/hr1.jpg" alt="" /></a>
+								<a href="https://github.com/AnityaGan9urde/HR-Analytics-Will-someone-quit"><img src="images/thumbs/hr1.jpg" class="image fit thumb" alt="" /></a>
 								<h3>HR Analytics: Predict whether someone will quit</h3>
 								<p>This is a Flask api that uses Support Vector Machines with RBF to determine if someone will quit a job provided various information about that employee. I achieved an accuracy of around 77% during training for this model.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://github.com/AnityaGan9urde/Would-You-Survive-Titanic-" class="image fit thumb"><img src="images/thumbs/titanic.jpg" alt="" /></a>
+								<a href="https://github.com/AnityaGan9urde/Would-You-Survive-Titanic-"><img src="images/thumbs/titanic.jpg" class="image fit thumb" alt="" /></a>
 								<h3>Would You Survive the Titanic disaster?</h3>
 								<p>The project is a Machine Learning api which implements Logistic Regression to predict whether you would survive the Titanic disaster. The api is made with Flask using python. The project includes a model to predict the survival given three inputs.</p>
 							</article>
@@ -76,11 +76,11 @@
 						<h2>Recent Blogs</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://becominghuman.ai/how-to-approach-any-data-science-problem-4c658443fda0" class="image fit thumb"><img src="images/fulls/blog1.jpg" alt="" /></a>
+								<a href="https://becominghuman.ai/how-to-approach-any-data-science-problem-4c658443fda0"><img src="images/fulls/blog1.jpg" class="image fit thumb" alt="" /></a>
 								<h3>How to approach any Data Science problem?</h3>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://medium.com/geekculture/how-confusion-matrices-are-useful-in-machine-learning-9893f88b0283" class="image fit thumb"><img src="images/fulls/blog2.jpg" alt="" /></a>
+								<a href="https://medium.com/geekculture/how-confusion-matrices-are-useful-in-machine-learning-9893f88b0283"><img src="images/fulls/blog2.jpg" class="image fit thumb" alt="" /></a>
 								<h3>How confusion matrices are useful in Machine Leaning?</h3>
 							</article>
 						</div>
@@ -93,32 +93,32 @@
 						<h2>Certifications</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://jovian.ai/certificate/MFQTKMZUGE" class="image fit thumb"><img src="images/certs/02gans.jpg" alt="PyTorch" /></a>
+								<a href="https://jovian.ai/certificate/MFQTKMZUGE"><img src="images/certs/02gans.jpg" class="image fit thumb" alt="PyTorch" /></a>
 								<h3>Deep Learning with Pytorch: Zero to GANs</h3>
 								<p>Certification for Deep Learning course using PyTorch framework with practical assignments and course projects.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/certs/int2nlp.jpg" alt="NLP" /></a>
+								<a href="https://courses.analyticsvidhya.com/certificates/31l9lbjcex"><img src="images/certs/int2nlp.jpg" class="image fit thumb" alt="NLP" /></a>
 								<h3>Introduction to Natural Language Processing</h3>
 								<p>Certification for an NLP course introducing to basic concepts of NLP with a Twitter hate speech detection project.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://ude.my/UC-2b07f57c-87bd-4687-a766-c37171dd0e1a" class="image fit thumb"><img src="images/certs/pymlbc.jpg" alt="ML Bootcamp" /></a>
+								<a href="https://ude.my/UC-2b07f57c-87bd-4687-a766-c37171dd0e1a"><img src="images/certs/pymlbc.jpg" class="image fit thumb" alt="ML Bootcamp" /></a>
 								<h3>Python for Data Science and ML Bootcamp</h3>
 								<p>Certification for a course which introduces to Python libraries such as Pandas, Numpy, Matplotlib and ML libraries such as Scikit-learn.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://ude.my/UC-76d210a8-8b02-4af3-90c8-5f2349d537aa" class="image fit thumb"><img src="images/certs/pydev.jpg" alt="Python" /></a>
+								<a href="https://ude.my/UC-76d210a8-8b02-4af3-90c8-5f2349d537aa"><img src="images/certs/pydev.jpg" class="image fit thumb" alt="Python" /></a>
 								<h3>Complete Python Developer in 2020</h3>
 								<p>Certification for understanding basic to intermediate concepts of the Python language.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://www.hackerrank.com/certificates/c42384242efe" class="image fit thumb"><img src="images/certs/py.jpg" alt="" /></a>
+								<a href="https://www.hackerrank.com/certificates/c42384242efe"><img src="images/certs/py.jpg" class="image fit thumb" alt="" /></a>
 								<h3>Python(Basics)</h3>
 								<p>Test certificate from HackerRank.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://www.hackerrank.com/certificates/6bacf2a99123" class="image fit thumb"><img src="images/certs/sql.jpg" alt="" /></a>
+								<a href="https://www.hackerrank.com/certificates/6bacf2a99123"><img src="images/certs/sql.jpg" class="image fit thumb" alt="" /></a>
 								<h3>SQL(Basics)</h3>
 								<p>Test certificate from HackerRank.</p>
 							</article>
