viewing certificates more closely

--- a/index.html
+++ b/index.html
@@ -93,33 +93,33 @@
 						<h2>Certifications</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://jovian.ai/certificate/MFQTKMZUGE"><img src="images/certs/02gans.jpg" class="image fit thumb" alt="PyTorch" /></a>
-								<h3>Deep Learning with Pytorch: Zero to GANs</h3>
+								<a href="images/certs/02gans.jpg" class="image fit thumb"><img src="images/certs/02gans.jpg" alt="PyTorch" /></a>
+								<a href="https://jovian.ai/certificate/MFQTKMZUGE"><h3>Deep Learning with Pytorch: Zero to GANs</h3></a>
 								<p>Certification for Deep Learning course using PyTorch framework with practical assignments and course projects.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://courses.analyticsvidhya.com/certificates/31l9lbjcex"><img src="images/certs/int2nlp.jpg" class="image fit thumb" alt="NLP" /></a>
-								<h3>Introduction to Natural Language Processing</h3>
+								<a href="images/certs/int2nlp.jpg" class="image fit thumb"><img src="images/certs/int2nlp.jpg" alt="NLP" /></a>
+								<a href="https://courses.analyticsvidhya.com/certificates/31l9lbjcex"><h3>Introduction to Natural Language Processing</h3></a>
 								<p>Certification for an NLP course introducing to basic concepts of NLP with a Twitter hate speech detection project.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://ude.my/UC-2b07f57c-87bd-4687-a766-c37171dd0e1a"><img src="images/certs/pymlbc.jpg" class="image fit thumb" alt="ML Bootcamp" /></a>
-								<h3>Python for Data Science and ML Bootcamp</h3>
+								<a href="images/certs/pymlbc.jpg" class="image fit thumb"><img src="images/certs/pymlbc.jpg" alt="ML Bootcamp" /></a>
+								<a href="https://ude.my/UC-2b07f57c-87bd-4687-a766-c37171dd0e1a"><h3>Python for Data Science and ML Bootcamp</h3></a>
 								<p>Certification for a course which introduces to Python libraries such as Pandas, Numpy, Matplotlib and ML libraries such as Scikit-learn.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://ude.my/UC-76d210a8-8b02-4af3-90c8-5f2349d537aa"><img src="images/certs/pydev.jpg" class="image fit thumb" alt="Python" /></a>
-								<h3>Complete Python Developer in 2020</h3>
+								<a href="images/certs/pydev.jpg" class="image fit thumb"><img src="images/certs/pydev.jpg" alt="Python" /></a>
+								<a href="https://ude.my/UC-76d210a8-8b02-4af3-90c8-5f2349d537aa"><h3>Complete Python Developer in 2020</h3></a>
 								<p>Certification for understanding basic to intermediate concepts of the Python language.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://www.hackerrank.com/certificates/c42384242efe"><img src="images/certs/py.jpg" class="image fit thumb" alt="" /></a>
-								<h3>Python(Basics)</h3>
+								<a href="images/certs/py.jpg" class="image fit thumb"><img src="images/certs/py.jpg" alt="" /></a>
+								<a href="https://www.hackerrank.com/certificates/c42384242efe"><h3>Python(Basics)</h3></a>
 								<p>Test certificate from HackerRank.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://www.hackerrank.com/certificates/6bacf2a99123"><img src="images/certs/sql.jpg" class="image fit thumb" alt="" /></a>
-								<h3>SQL(Basics)</h3>
+								<a href="images/certs/sql.jpg" class="image fit thumb"><img src="images/certs/sql.jpg" alt="" /></a>
+								<a href="https://www.hackerrank.com/certificates/6bacf2a99123"><h3>SQL(Basics)</h3></a>
 								<p>Test certificate from HackerRank.</p>
 							</article>
 						</div>
