--- a/index.html
+++ b/index.html
@@ -60,14 +60,14 @@
 									I trained an XGBoost model on this customer dataset and achieved an accuracy of 86.36%.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://github.com/AnityaGan9urde/HR-Analytics-Will-someone-quit"><img src="images/thumbs/hr1.jpg" class="image fit thumb" alt="" /></a>
+								<a href="https://hr-analytics-will-someone-quit.herokuapp.com/"><img src="images/thumbs/hr1.jpg" class="image fit thumb" alt="" /></a>
 								<h3>HR Analytics: Predict whether someone will quit</h3>
-								<p>This is a Flask api that uses Support Vector Machines with RBF to determine if someone will quit a job provided various information about that employee. I achieved an accuracy of around 77% during training for this model.</p>
+								<p>This is a Flask api deployed on Heroku that uses Support Vector Machines with RBF to determine if someone will quit a job provided various information about that employee. I achieved an accuracy of around 77% during training for this model.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://github.com/AnityaGan9urde/Would-You-Survive-Titanic-"><img src="images/thumbs/titanic.jpg" class="image fit thumb" alt="" /></a>
+								<a href="https://would-you-survive-the-titanic.herokuapp.com/"><img src="images/thumbs/titanic.jpg" class="image fit thumb" alt="" /></a>
 								<h3>Would You Survive the Titanic disaster?</h3>
-								<p>The project is a Machine Learning api which implements Logistic Regression to predict whether you would survive the Titanic disaster. The api is made with Flask using python. The project includes a model to predict the survival given three inputs.</p>
+								<p>The project is a Machine Learning api, deployed on Heroku, which implements Logistic Regression to predict whether you would survive the Titanic disaster. The api is made with Flask using python. The project includes a model to predict the survival given three inputs.</p>
 							</article>
 						</div>
 				<!-- Three -->
