--- a/index.html
+++ b/index.html
@@ -48,6 +48,12 @@
 						<h2>Recent Work</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
+								<a href="https://would-you-survive-titanic-2.herokuapp.com/"><img src="images/thumbs/titanic.jpg"  class="image fit thumb" alt="" /></a>
+								<h3>Would You Survive the Titanic disaster [Version 2.0]</h3>
+								<p>Continuing the work of a previous Flask project, here I trained multiple models and included multiple features to get more accurate predictions.
+									The models takes more number of features and gives a prediction.</p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
 								<a href="https://jovian.ai/anityagangurde01/resnet-34-to-classify-fishes"><img src="images/thumbs/fish.jpg"  class="image fit thumb" alt="" /></a>
 								<h3>Using ResNet34 on Fish Dataset</h3>
 								<p>In this project, I used a pretrained ResNet34 model to train the Fish Dataset on, which was taken from Kaggle.
