--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 						<h2>Recent Work</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://would-you-survive-titanic-2.herokuapp.com/"><img src="images/thumbs/titanic.jpg"  class="image fit thumb" alt="" /></a>
+								<a href="https://would-you-survive-titanic-2.herokuapp.com/"><img src="images/thumbs/titanic.jpg"  class="image fit thumb zoom " alt="" /></a>
 								<h3>Would You Survive the Titanic disaster [Version 2.0]</h3>
 								<p>Continuing the work of a previous Flask project, here I trained multiple models and included multiple features to get more accurate predictions.
 									The models takes more number of features and gives a prediction.</p>
