--- a/index.html
+++ b/index.html
@@ -48,30 +48,30 @@
 						<h2>Recent Work</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://would-you-survive-titanic-2.herokuapp.com/" class="image fit thumb zoom deploy"><img src="images/thumbs/titanic.jpg" alt="" /></a>
+								<a href="https://would-you-survive-titanic-2.herokuapp.com/" class="image fit zoom deploy"><img src="images/thumbs/titanic.jpg" alt="" /></a>
 								<a href="https://github.com/AnityaGan9urde/would-you-survive-titanic-2.0"><h3>Would You Survive the Titanic disaster [Version 2.0]</h3></a>
 								<p>Continuing the work of a previous Flask project, here I trained multiple models and included multiple features to get more accurate predictions.
 									The models takes more number of features and gives a prediction.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://jovian.ai/anityagangurde01/resnet-34-to-classify-fishes" class="image fit thumb zoom code"><img src="images/thumbs/fish.jpg" alt="" /></a>
+								<a href="https://jovian.ai/anityagangurde01/resnet-34-to-classify-fishes" class="image fit zoom code"><img src="images/thumbs/fish.jpg" alt="" /></a>
 								<h3>Using ResNet34 on Fish Dataset</h3>
 								<p>In this project, I used a pretrained ResNet34 model to train the Fish Dataset on, which was taken from Kaggle.
 									I achieved an accuracy of 99.70% within around 8 minutes.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://www.kaggle.com/anityagangurde/bank-customer-churn-prediction-xgboost-86-36" class="image fit thumb zoom code"><img src="images/thumbs/bank.jpg" alt="" /></a>
+								<a href="https://www.kaggle.com/anityagangurde/bank-customer-churn-prediction-xgboost-86-36" class="image fit zoom code"><img src="images/thumbs/bank.jpg" alt="" /></a>
 								<h3>Banking Customer Churn Rate</h3>
 								<p>Banking Customer Churn Rate is a project in which the model determines whether customers will leave the bank given certain information about them.
 									I trained an XGBoost model on this customer dataset and achieved an accuracy of 86.36%.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://hr-analytics-will-someone-quit.herokuapp.com/" class="image fit thumb zoom deploy"><img src="images/thumbs/hr1.jpg" alt="" /></a>
+								<a href="https://hr-analytics-will-someone-quit.herokuapp.com/" class="image fit zoom deploy"><img src="images/thumbs/hr1.jpg" alt="" /></a>
 								<a href="https://github.com/AnityaGan9urde/HR-Analytics-Will-someone-quit"><h3>HR Analytics: Predict whether someone will quit</h3></a>
 								<p>This is a Flask api deployed on Heroku that uses Support Vector Machines with RBF to determine if someone will quit a job provided various information about that employee. I achieved an accuracy of around 77% during training for this model.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://would-you-survive-the-titanic.herokuapp.com/" class="image fit thumb zoom deploy"><img src="images/thumbs/titanic.jpg" alt="" /></a>
+								<a href="https://would-you-survive-the-titanic.herokuapp.com/" class="image fit zoom deploy"><img src="images/thumbs/titanic.jpg" alt="" /></a>
 								<a href="https://github.com/AnityaGan9urde/Would-You-Survive-Titanic"><h3>Would You Survive the Titanic disaster?</h3></a>
 								<p>The project is a Machine Learning api, deployed on Heroku, which implements Logistic Regression to predict whether you would survive the Titanic disaster. The api is made with Flask using python. The project includes a model to predict the survival given three inputs.</p>
 							</article>
@@ -82,11 +82,11 @@
 						<h2>Recent Blogs</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://becominghuman.ai/how-to-approach-any-data-science-problem-4c658443fda0" class="image fit thumb zoom read"><img src="images/fulls/blog1.jpg" class="image fit thumb zoom" alt="" /></a>
+								<a href="https://becominghuman.ai/how-to-approach-any-data-science-problem-4c658443fda0" class="image fit zoom read"><img src="images/fulls/blog1.jpg" class="image fit thumb zoom" alt="" /></a>
 								<h3>How to approach any Data Science problem?</h3>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://medium.com/geekculture/how-confusion-matrices-are-useful-in-machine-learning-9893f88b0283" class="image fit thumb zoom read"><img src="images/fulls/blog2.jpg" alt="" /></a>
+								<a href="https://medium.com/geekculture/how-confusion-matrices-are-useful-in-machine-learning-9893f88b0283" class="image fit zoom read"><img src="images/fulls/blog2.jpg" alt="" /></a>
 								<h3>How confusion matrices are useful in Machine Leaning?</h3>
 							</article>
 						</div>
