--- a/index.html
+++ b/index.html
@@ -10,6 +10,127 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<style>
+		.column {
+		  float: left;
+		  width: 25%;
+		}
+		/* The Modal (background) */
+		.modal {
+		  display: none;
+		  position: fixed;
+		  z-index: 1;
+		  padding-top: 100px;
+		  left: 0;
+		  top: 0;
+		  width: 100%;
+		  height: 100%;
+		  overflow: auto;
+		  background-color: black;
+		}
+
+		/* Modal Content */
+		.modal-content {
+		  position: relative;
+		  background-image: '../assets/css/images/overlay.png';
+		  margin: auto;
+		  padding: 0;
+		  width: 700px;
+		  border-radius: 5px;
+		}
+
+		/* The Close Button */
+		.close {
+		  color: white;
+		  position: absolute;
+		  top: 10px;
+		  right: 25px;
+		  font-size: 35px;
+		  font-weight: bold;
+		}
+
+		.close:hover,
+		.close:focus {
+		  color: #999;
+		  text-decoration: none;
+		  cursor: pointer;
+		}
+
+		.mySlides {
+		  display: none;
+		}
+
+		.cursor {
+		  cursor: pointer;
+		}
+
+		/* Next & previous buttons */
+		.prev,
+		.next {
+		  cursor: pointer;
+		  position: absolute;
+		  top: 50%;
+		  width: auto;
+		  padding: 16px;
+		  margin-top: -50px;
+		  color: white;
+		  font-weight: bold;
+		  font-size: 20px;
+		  transition: 0.6s ease;
+		  border-radius: 0 3px 3px 0;
+		  user-select: none;
+		  -webkit-user-select: none;
+		}
+
+		/* Position the "next button" to the right */
+		.next {
+		  right: 0;
+		  border-radius: 3px 0 0 3px;
+		}
+
+		/* On hover, add a black background color with a little bit see-through */
+		.prev:hover,
+		.next:hover {
+		  background-color: rgba(0, 0, 0, 0.8);
+		}
+
+		/* Number text (1/3 etc) */
+		.numbertext {
+		  color: #00000;
+		  font-size: 12px;
+		  padding: 8px 12px;
+		  position: absolute;
+		  top: 0;
+		}
+
+		img {
+		  margin-bottom: -4px;
+		}
+
+		.caption-container {
+		  text-align: center;
+		  background-color: black;
+		  padding: 2px 16px;
+		  color: white;
+		}
+
+		.demo {
+		  opacity: 0.6;
+		}
+
+		.active,
+		.demo:hover {
+		  opacity: 1;
+		}
+
+		img.hover-shadow {
+		  transition: 0.3s;
+		}
+
+		.hover-shadow:hover {
+		  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+		}
+		</style>
 	</head>
 	<body class="is-preload">
 
@@ -48,30 +169,30 @@
 						<h2>Recent Work</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://would-you-survive-titanic-2.herokuapp.com/" class="image fit zoom deploy"><img src="images/thumbs/titanic.jpg" alt="" /></a>
+								<a href="https://would-you-survive-titanic-2.herokuapp.com/"><img src="images/thumbs/titanic.jpg" class="image fit zoom deploy hover-shadow" alt="" /></a>
 								<a href="https://github.com/AnityaGan9urde/would-you-survive-titanic-2.0"><h3>Would You Survive the Titanic disaster [Version 2.0]</h3></a>
 								<p>Continuing the work of a previous Flask project, here I trained multiple models and included multiple features to get more accurate predictions.
 									The models takes more number of features and gives a prediction.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://jovian.ai/anityagangurde01/resnet-34-to-classify-fishes" class="image fit zoom code"><img src="images/thumbs/fish.jpg" alt="" /></a>
+								<a href="https://jovian.ai/anityagangurde01/resnet-34-to-classify-fishes"><img src="images/thumbs/fish.jpg" class="image fit zoom deploy hover-shadow" alt="" /></a>
 								<h3>Using ResNet34 on Fish Dataset</h3>
 								<p>In this project, I used a pretrained ResNet34 model to train the Fish Dataset on, which was taken from Kaggle.
 									I achieved an accuracy of 99.70% within around 8 minutes.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://www.kaggle.com/anityagangurde/bank-customer-churn-prediction-xgboost-86-36" class="image fit zoom code"><img src="images/thumbs/bank.jpg" alt="" /></a>
+								<a href="https://www.kaggle.com/anityagangurde/bank-customer-churn-prediction-xgboost-86-36"><img src="images/thumbs/bank.jpg" class="image fit zoom deploy hover-shadow" alt="" /></a>
 								<h3>Banking Customer Churn Rate</h3>
 								<p>Banking Customer Churn Rate is a project in which the model determines whether customers will leave the bank given certain information about them.
 									I trained an XGBoost model on this customer dataset and achieved an accuracy of 86.36%.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://hr-analytics-will-someone-quit.herokuapp.com/" class="image fit zoom deploy"><img src="images/thumbs/hr1.jpg" alt="" /></a>
+								<a href="https://hr-analytics-will-someone-quit.herokuapp.com/"><img src="images/thumbs/hr1.jpg" class="image fit zoom deploy hover-shadow" alt="" /></a>
 								<a href="https://github.com/AnityaGan9urde/HR-Analytics-Will-someone-quit"><h3>HR Analytics: Predict whether someone will quit</h3></a>
 								<p>This is a Flask api deployed on Heroku that uses Support Vector Machines with RBF to determine if someone will quit a job provided various information about that employee. I achieved an accuracy of around 77% during training for this model.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://would-you-survive-the-titanic.herokuapp.com/" class="image fit zoom deploy"><img src="images/thumbs/titanic.jpg" alt="" /></a>
+								<a href="https://would-you-survive-the-titanic.herokuapp.com/"><img src="images/thumbs/titanic.jpg" class="image fit zoom deploy hover-shadow" alt="" /></a>
 								<a href="https://github.com/AnityaGan9urde/Would-You-Survive-Titanic"><h3>Would You Survive the Titanic disaster?</h3></a>
 								<p>The project is a Machine Learning api, deployed on Heroku, which implements Logistic Regression to predict whether you would survive the Titanic disaster. The api is made with Flask using python. The project includes a model to predict the survival given three inputs.</p>
 							</article>
@@ -82,11 +203,11 @@
 						<h2>Recent Blogs</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://becominghuman.ai/how-to-approach-any-data-science-problem-4c658443fda0" class="image fit zoom read"><img src="images/fulls/blog1.jpg" class="image fit thumb zoom" alt="" /></a>
+								<a href="https://becominghuman.ai/how-to-approach-any-data-science-problem-4c658443fda0" class="image fit zoom read hover-shadow"><img src="images/fulls/blog1.jpg" alt="" /></a>
 								<h3>How to approach any Data Science problem?</h3>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://medium.com/geekculture/how-confusion-matrices-are-useful-in-machine-learning-9893f88b0283" class="image fit zoom read"><img src="images/fulls/blog2.jpg" alt="" /></a>
+								<a href="https://medium.com/geekculture/how-confusion-matrices-are-useful-in-machine-learning-9893f88b0283" class="image fit zoom read hover-shadow"><img src="images/fulls/blog2.jpg" alt="" /></a>
 								<h3>How confusion matrices are useful in Machine Leaning?</h3>
 							</article>
 						</div>
@@ -99,35 +220,73 @@
 						<h2>Certifications</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/certs/02gans.jpg" class="image fit thumb zoom"><img src="images/certs/02gans.jpg" alt="PyTorch" /></a>
+								<img src="images/certs/02gans.jpg" class="image fit thumb zoom hover-shadow cursor" alt="PyTorch" onclick="openModal();currentSlide(1)" />
 								<a href="https://jovian.ai/certificate/MFQTKMZUGE"><h3>Deep Learning with Pytorch: Zero to GANs</h3></a>
 								<p>Certification for Deep Learning course using PyTorch framework with practical assignments and course projects.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/certs/int2nlp.jpg" class="image fit thumb zoom"><img src="images/certs/int2nlp.jpg" alt="NLP" /></a>
+								<img src="images/certs/int2nlp.jpg" class="image fit thumb zoom hover-shadow cursor" alt="NLP" onclick="openModal();currentSlide(2)" />
 								<a href="https://courses.analyticsvidhya.com/certificates/31l9lbjcex"><h3>Introduction to Natural Language Processing</h3></a>
 								<p>Certification for an NLP course introducing to basic concepts of NLP with a Twitter hate speech detection project.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/certs/pymlbc.jpg" class="image fit thumb zoom"><img src="images/certs/pymlbc.jpg" alt="ML Bootcamp" /></a>
+								<img id="myImg" src="images/certs/pymlbc.jpg" class="image fit thumb zoom hover-shadow cursor" alt="ML Bootcamp" onclick="openModal();currentSlide(3)" />
 								<a href="https://ude.my/UC-2b07f57c-87bd-4687-a766-c37171dd0e1a"><h3>Python for Data Science and ML Bootcamp</h3></a>
 								<p>Certification for a course which introduces to Python libraries such as Pandas, Numpy, Matplotlib and ML libraries such as Scikit-learn.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/certs/pydev.jpg" class="image fit thumb zoom"><img src="images/certs/pydev.jpg" alt="Python" /></a>
+								<img id="myImg" src="images/certs/pydev.jpg" class="image fit thumb zoom hover-shadow cursor" alt="Python" onclick="openModal();currentSlide(4)" />
 								<a href="https://ude.my/UC-76d210a8-8b02-4af3-90c8-5f2349d537aa"><h3>Complete Python Developer in 2020</h3></a>
 								<p>Certification for understanding basic to intermediate concepts of the Python language.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/certs/py.jpg" class="image fit thumb zoom"><img src="images/certs/py.jpg" alt="" /></a>
+								<img id="myImg" src="images/certs/py.jpg" class="image fit thumb zoom hover-shadow cursor" alt="" onclick="openModal();currentSlide(5)" />
 								<a href="https://www.hackerrank.com/certificates/c42384242efe"><h3>Python(Basics)</h3></a>
 								<p>Test certificate from HackerRank.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/certs/sql.jpg" class="image fit thumb zoom"><img src="images/certs/sql.jpg" alt="" /></a>
+								<img id="myImg" src="images/certs/sql.jpg" class="image fit thumb zoom hover-shadow cursor" alt="" onclick="openModal();currentSlide(6)" />
 								<a href="https://www.hackerrank.com/certificates/6bacf2a99123"><h3>SQL(Basics)</h3></a>
 								<p>Test certificate from HackerRank.</p>
 							</article>
+						</div>
+						<div id="myModal" class="modal">
+						  <span class="close cursor" onclick="closeModal()">&times;</span>
+						  <div class="modal-content">
+
+						    <div class="mySlides">
+						      <div class="numbertext">1 / 6</div>
+						      <img src="images/certs/02gans.jpg" style="width:100%; border-radius: 5px">
+						    </div>
+
+						    <div class="mySlides">
+						      <div class="numbertext">2 / 6</div>
+						      <img src="images/certs/int2nlp.jpg" style="width:100%; border-radius: 5px">
+						    </div>
+
+						    <div class="mySlides">
+						      <div class="numbertext">3 / 6</div>
+						      <img src="images/certs/pymlbc.jpg" style="width:100%; border-radius: 5px">
+						    </div>
+
+						    <div class="mySlides">
+						      <div class="numbertext">4 / 6</div>
+						      <img src="images/certs/pydev.jpg" style="width:100%; border-radius: 5px">
+						    </div>
+
+						    <div class="mySlides">
+						      <div class="numbertext">5 / 6</div>
+						      <img src="images/certs/py.jpg" style="width:100%; border-radius: 5px">
+						    </div>
+
+						    <div class="mySlides">
+						      <div class="numbertext">6 / 6</div>
+						      <img src="images/certs/sql.jpg" style="width:100%; border-radius: 5px">
+						    </div>
+
+						    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+						    <a class="next" onclick="plusSlides(1)">&#10095;</a>
+						  </div>
 						</div>
 
 					</section>
@@ -160,7 +319,7 @@
 			<footer id="footer">
 				<div class="inner">
 					<ul class="icons">
-						<li><a href="https://www.twitter.com/anityagan9urde/" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+						<li><a href="https://www.twitter.com/anitropy_42/" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="https://www.linkedin.com/in/anityagan9urde/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 						<li><a href="https://anityagan9urde.medium.com/" class="icon brands fa-medium"><span class="label">Medium</span></a></li>
 						<li><a href="https://www.github.com/anityagan9urde/" class="icon brands fa-github"><span class="label">Github</span></a></li>
@@ -178,6 +337,44 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
+			<script>
+			function openModal() {
+			  document.getElementById("myModal").style.display = "block";
+			}
+
+			function closeModal() {
+			  document.getElementById("myModal").style.display = "none";
+			}
+
+			var slideIndex = 1;
+			showSlides(slideIndex);
+
+			function plusSlides(n) {
+			  showSlides(slideIndex += n);
+			}
+
+			function currentSlide(n) {
+			  showSlides(slideIndex = n);
+			}
+
+			function showSlides(n) {
+			  var i;
+			  var slides = document.getElementsByClassName("mySlides");
+			  var dots = document.getElementsByClassName("demo");
+			  var captionText = document.getElementById("caption");
+			  if (n > slides.length) {slideIndex = 1}
+			  if (n < 1) {slideIndex = slides.length}
+			  for (i = 0; i < slides.length; i++) {
+			      slides[i].style.display = "none";
+			  }
+			  for (i = 0; i < dots.length; i++) {
+			      dots[i].className = dots[i].className.replace(" active", "");
+			  }
+			  slides[slideIndex-1].style.display = "block";
+			  dots[slideIndex-1].className += " active";
+			  captionText.innerHTML = dots[slideIndex-1].alt;
+			}
+			</script>
 
 	</body>
 </html>
