--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<style>
+		.label {
+		  color: white;
+		  padding: 8px;
+		}
+		.tag {background-color: #e7e7e7; color: black;}
 		.column {
 		  float: left;
 		  width: 25%;
@@ -171,6 +176,7 @@
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="https://would-you-survive-titanic-2.herokuapp.com/"><img src="images/thumbs/titanic.jpg" class="image fit zoom deploy hover-shadow" alt="" /></a>
 								<a href="https://github.com/AnityaGan9urde/would-you-survive-titanic-2.0"><h3>Would You Survive the Titanic disaster [Version 2.0]</h3></a>
+								<span class="label tag">Python</span>
 								<p>Continuing the work of a previous Flask project, here I trained multiple models and included multiple features to get more accurate predictions.
 									The models takes more number of features and gives a prediction.</p>
 							</article>
