--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
 		.label {
 		  color: white;
 		  padding: 8px;
+		  margin: 4px;
 		}
-		.tag {background-color: #e7e7e7; color: black;}
+		.tag {background-color: #e7e7e7; border-radius: 3px}
 		.column {
 		  float: left;
 		  width: 25%;
@@ -176,7 +177,7 @@
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="https://would-you-survive-titanic-2.herokuapp.com/"><img src="images/thumbs/titanic.jpg" class="image fit zoom deploy hover-shadow" alt="" /></a>
 								<a href="https://github.com/AnityaGan9urde/would-you-survive-titanic-2.0"><h3>Would You Survive the Titanic disaster [Version 2.0]</h3></a>
-								<span class="label tag">Python</span>
+								<span class="label tag">Python</span><span class="label tag">Flask</span>
 								<p>Continuing the work of a previous Flask project, here I trained multiple models and included multiple features to get more accurate predictions.
 									The models takes more number of features and gives a prediction.</p>
 							</article>
