--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<style>
 		.label {
-		  color: white;
-		  padding: 6px;
-		  margin: 5px;
+		  color: black;
+		  padding: 5px;
 		  font-family: Arial;
+		  font-size: 75%;
 		}
-		.tag {background-color: #A9A9A9; border-radius: 16px}
+		.tag {background-color: #e7e7e7; border-radius: 2px}
 		.column {
 		  float: left;
 		  width: 25%;
