--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<style>
 		.label {
-		  color: black;
+		  color: #a2a2a2;
 		  padding: 5px;
-		  font-family: Arial;
+		  font-family: "Source Sans Pro";
 		  font-size: 75%;
+		  margin: 3px
 		}
 		.tag {background-color: #e7e7e7; border-radius: 2px}
 		.column {
