--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		  margin: 3px
 		}
 		.tag {background-color: #e7e7e7; border-radius: 2px}
-		.deployed {background-color: #04AA6D; border-radius: 2px}
+		.deployed {background-color: #04AA6D; color: black; border-radius: 2px}
 		.column {
 		  float: left;
 		  width: 25%;
