--- a/index.html
+++ b/index.html
@@ -57,16 +57,16 @@
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="https://jovian.ai/anityagangurde01/resnet-34-to-classify-fishes"><img src="images/thumbs/fish.jpg" class="image fit zoom deploy hover-shadow" alt="" /></a>
 								<h3>Using ResNet34 on Fish Dataset</h3>
-								<span class="label tag">ResNet-34</span><span class="label tag">PyTorch</span><br>
+								<span class="label tag">ResNet-34</span><span class="label tag">PyTorch</span><span class="label notebook">Notebook</span><br>
 								<p>In this project, I used a pretrained ResNet34 model to train the Fish Dataset on, which was taken from Kaggle.
 									I achieved an accuracy of 99.70% within around 8 minutes.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="https://www.kaggle.com/anityagangurde/bank-customer-churn-prediction-xgboost-gpu/notebook"><img src="images/thumbs/bank.jpg" class="image fit zoom deploy hover-shadow" alt="" /></a>
 								<h3>Banking Customer Churn Rate</h3>
-								<span class="label tag">XG-Boost</span><span class="label tag">EDA</span><span class="label tag">Scikit-Learn</span><br>
+								<span class="label tag">XG-Boost</span><span class="label tag">EDA</span><span class="label tag">Scikit-Learn</span><span class="label notebook">Notebook</span><br>
 								<p>Banking Customer Churn Rate is a project in which the model determines whether customers will leave the bank given certain information about them.
-									I trained an XGBoost model on this customer dataset and achieved an accuracy of 86.36%.</p>
+									I trained an XGBoost model on this customer dataset using cross-validation and hyper-tuned it to achieve an accuracy of 85.4% as compared to 81% and 75% on normal XGBoost model and Logistic Regression respectively.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="https://hr-analytics-will-someone-quit.herokuapp.com/"><img src="images/thumbs/hr1.jpg" class="image fit zoom deploy hover-shadow" alt="" /></a>
