--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 									The models takes more number of features and gives a prediction.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://jovian.ai/anityagangurde01/resnet-34-to-classify-fishes"><img src="images/thumbs/fish.jpg" class="image fit zoom deploy hover-shadow" alt="" /></a>
+								<a href="https://www.kaggle.com/anityagangurde/training-resnet34-on-gpu-99-41-accuracy"><img src="images/thumbs/fish.jpg" class="image fit zoom deploy hover-shadow" alt="" /></a>
 								<h3>Using ResNet34 on Fish Dataset</h3>
 								<span class="label tag">ResNet-34</span><span class="label tag">PyTorch</span><span class="label notebook">Notebook</span><br>
 								<p>In this project, I used a pretrained ResNet34 model to train the Fish Dataset on, which was taken from Kaggle.
