--- a/index.html
+++ b/index.html
@@ -32,9 +32,10 @@
 						</header>
 						<p>Hello, I am Anitya. I like working with computers and using them to solve complex problems. That's why the field of Data Science is of particular interest to me as it combines both of these things, computers and critical problem-solving. Currently, I am still learning and understanding how all parts of data science come into play in the real world.</p>
 						<p>Following are some of my current skills 👇<br />
-							▶️ Programming💻| Python • R<br />
-							▶️ Web & Database 💾| HTML • CSS • MySQL • PostgreSQL<br />
-							▶️ Frameworks 🖼| Pandas • Numpy • Scikit-Learn • PyTorch • TensorFlow (Keras)<br />
+							Skill Proficiency Level: 🟡 🟠 🔴
+							▶️ Programming💻| Python 🔴 • R 🟡 <br />
+							▶️ Web & Database 💾| HTML 🟠 • CSS 🟠 • MySQL 🟠 • PostgreSQL 🟡 <br />
+							▶️ Frameworks 🖼| Pandas 🟠 • Numpy 🟠 • Scikit-Learn 🔴 • PyTorch 🟠 • TensorFlow (Keras) 🟡 <br />
 							▶️ Tech 👨‍💻| Git • VSCode • PyCharm • Sublime Text • Jupyter • Google Collab • Power BI • MS Office<br />
 							▶️ Soft Skills 👬| Communication • Presentation • Manners • Flexibility<br />
 							▶️ Work ethics 👷‍♂️| Figure out • Work hard and smart • Perfection<br /></p>
