--- a/index.html
+++ b/index.html
@@ -19,14 +19,16 @@
 					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
 					<h1><strong>I am Anitya Gangurde</strong>, a self-taught pythonista and a Deep Learning Enthusiast<br />
 					with interests in GANs and NLPs.</h1>
+				</div>
+				<div class="inner" style="align-content: left;">
 					<p>Following are some of my current skills 👇<br />
-							Skill Proficiency Level: 🟡 🟠 🔴<br />
-							▶️ Programming💻| Python 🔴 • R 🟡 <br />
-							▶️ Web & Database 💾| HTML 🟠 • CSS 🟠 • MySQL 🟠 • PostgreSQL 🟡 <br />
-							▶️ Frameworks 🖼| Pandas 🟠 • Numpy 🟠 • Scikit-Learn 🔴 • PyTorch 🟠 • TensorFlow (Keras) 🟡 <br />
-							▶️ Tech 👨‍💻| Git • VSCode • PyCharm • Sublime Text • Jupyter • Google Collab • Power BI • MS Office<br />
-							▶️ Soft Skills 👬| Communication • Presentation • Manners • Flexibility<br />
-							▶️ Work ethics 👷‍♂️| Figure out • Work hard and smart • Perfection<br /></p>
+					Skill Proficiency Level: 🟡 🟠 🔴<br />
+					▶️ Programming💻| Python 🔴 • R 🟡 <br />
+					▶️ Web & Database 💾| HTML 🟠 • CSS 🟠 • MySQL 🟠 • PostgreSQL 🟡 <br />
+					▶️ Frameworks 🖼| Pandas 🟠 • Numpy 🟠 • Scikit-Learn 🔴 • PyTorch 🟠 • TensorFlow (Keras) 🟡 <br />
+					▶️ Tech 👨‍💻| Git • VSCode • PyCharm • Sublime Text • Jupyter • Google Collab • Power BI • MS Office<br />
+					▶️ Soft Skills 👬| Communication • Presentation • Manners • Flexibility<br />
+					▶️ Work ethics 👷‍♂️| Figure out • Work hard and smart • Perfection<br /></p>
 				</div>
 			</header>
 
